<resources>
    <string name="app_name">HouseCallMD</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_create_account">Create Account</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="PersonalInformation">Personal Information</string>
    <string name="Name">Name</string>
    <string name="PatientName">First Name    Last Name</string>
    <string name="PatientAddress">Address</string>
    <string name="PatientAddressInfo">Enter Address</string>
    <string name="DateofBirth">Date of Birth</string>
    <string name="PatientDoB">Enter Date of Birth</string>
    <string name="Email">Email</string>
    <string name="EmailInfo">Enter Email</string>
    <string name="Phone">Phone Number</string>
    <string name="PhoneInfo">Enter Phone</string>
    <string name="Gender">Gender</string>
    <string name="Gendertype1">Male</string>
    <string name="Gendertype2">Female</string>
    <string name="Marital">Marital Status</string>
    <string name="Maritaltype1">Single</string>
    <string name="Maritaltype2">Married</string>
    <string name="Maritaltype3">Divorced</string>
    <string name="InsuranceInformation">Insurance Information</string>
    <string name="InsuranceName">Insurance Company</string>
    <string name="InsName">Enter Insurance Company</string>
    <string name="InsuranceId">Insurance ID</string>
    <string name="InsuanceIdInfo">Enter Insurance ID#</string>
    <string name="GroupNumber">Group Number</string>
    <string name="GroupNumberInfo">Enter Group Number</string>
    <string name="EmergencyInformation">Emergency Information</string>
    <string name="EmergencyName">Name</string>
    <string name="EmergencyFullName">First Name    Last Name</string>
    <string name="EmergencyPhone">Emergency Phone</string>
    <string name="EmergencyPhoneInfo">Enter Emergency Phone</string>
    <string name="patientbutton">Submit</string>
    <string name="EmergencyStatus">Emergency Relationship</string>
    <string name="Emergencytype1">Spouse</string>
    <string name="Emergencytype2">Relative</string>
    <string name="Emergencytype3">Guardian</string>
    <string name="Emergencytype4">Friend</string>
    <string name="PastMedicalHistory">Past Medical History</string>
    <string name="MedicalHistoryInformation">Please Check Applicable</string>
    <string name="Password">Password</string>
    <string name="Request">Request</string>
    <string name="Cancel">Cancel</string>
    <string name="heartattack">Heart Attack</string>
    <string name="stroke">Stroke</string>
    <string name="diabetes">Diabetes</string>
    <string name="arthiritis">Arthiritis</string>
    <string name="FamilyHistory">Family History</string>
    <string name="FamilyHistoryInformation">Please Check Applicabale</string>
    <string name="heartdisease">Heart Disease</string>
    <string name="highbloodpressure">High Blood Pressure</string>
    <string name="tuberculosis">Tuberculosis</string>
    <string name="narcolypsy">Narcolypsy</string>
    <string name="Lifestyle">Lifestyle</string>
    <string name="LifestyleInformation">Please Check Applicabale</string>
    <string name="Cardio">Cardio</string>
    <string name="resistancetraining">Resistance</string>
    <string name="aerobics">Aerobics</string>
    <string name="sedentary">Sedentary</string>
    <string name="whoAreYou">Who are you?</string>
    <string name="Patient">Patient</string>
    <string name="Doctor">Doctor</string>
    <string name="Nurse">Nurse</string>
</resources>
