<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.app.gsu.housecallmd.User">
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whoAreYou"
        android:layout_marginBottom="40dp"
        android:textSize="20sp" />
    <RadioGroup android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton android:id="@+id/radio_patient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Patient"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_Doctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Doctor"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/radio_Nurse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Nurse"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

</LinearLayout>